src/asmjit/parsers/pascal/MiniPascalParser.py
# Generated from grammar/MiniPascalParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniPascalParser ( Parser ):

    grammarFileName = "MiniPascalParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'..'", "'.'", "':='", "':'", 
                     "';'", "','", "'+'", "'-'", "'*'", "'/'", "'['", "'('", 
                     "')'", "']'", "'^'", "'@'", "'='", "'<='", "'<>'", 
                     "'<'", "'>='", "'>'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "BEGIN_", "END", "LIBRARY", 
                      "UNIT", "INTERFACE", "IMPLEMENTATION", "USES", "EXPORTS", 
                      "CONST", "VAR", "TYPE", "RECORD", "ARRAY", "OF", "NIL", 
                      "DOUBLE", "INTEGER", "CASE", "IF", "THEN", "ELSE", 
                      "BREAK", "CONTINUE", "NOT", "AND", "OR", "XOR", "WHILE", 
                      "DO", "REPEAT", "UNTIL", "FOR", "TO", "DOWNTO", "INC", 
                      "DEC", "LOW", "HIGH", "POS", "COPY", "LENGTH", "ASSIGNED", 
                      "PROCEDURE", "FUNCTION", "RESULT", "EXIT", "TRY", 
                      "FINALLY", "EXCEPT", "CLASS", "CONSTRUCTOR", "DESTRUCTOR", 
                      "PRIVATE", "PROTECTED", "PUBLIC", "PUBLISHED", "PROPERTY", 
                      "READ", "WRITE", "INHERITED", "WRITELN", "BOOLEAN", 
                      "TRUE", "FALSE", "BLAKE2", "CRC16", "CRC32", "CRC32C", 
                      "CRC64", "MD5", "SHA1", "SHA3", "SHA224", "SHA256", 
                      "SHA384", "SHA512", "DISKFREE", "DISKTOTAL", "DISKLABEL", 
                      "DISKSERIAL", "DISKFILESYSTEM", "DISKTYPE", "DISKSHARE", 
                      "COMPILER_DIRECTIVE", "DOTDOT", "DOT", "ASSIGN", "COLON", 
                      "SEMI", "COMMA", "PLUS", "MINUS", "STAR", "SLASH", 
                      "LBRACK", "LPAREN", "RPAREN", "RBRACK", "CARET", "AT", 
                      "EQ_OP", "LE_OP", "NE_OP", "LT_OP", "GE_OP", "GT_OP", 
                      "STRING", "IDENT", "HEXNUMBER", "FLOATNUMBER", "NUMBER", 
                      "WS", "COMMENT1", "COMMENT2", "COMMENT3" ]

    RULE_sourceFile = 0
    RULE_programFile = 1
    RULE_unitFile = 2
    RULE_libraryFile = 3
    RULE_compilerDirective = 4
    RULE_exportsClause = 5
    RULE_exportItem = 6
    RULE_exportSignature = 7
    RULE_exportTypeList = 8
    RULE_usesClause = 9
    RULE_qualifiedIdentList = 10
    RULE_interfaceSection = 11
    RULE_implementationSection = 12
    RULE_interfaceDeclarationPart = 13
    RULE_implementationDeclarationPart = 14
    RULE_unitInitBlock = 15
    RULE_qualifiedIdent = 16
    RULE_declarationPart = 17
    RULE_classMethodImplementation = 18
    RULE_procedureHeader = 19
    RULE_functionHeader = 20
    RULE_constSection = 21
    RULE_constDeclaration = 22
    RULE_constItem = 23
    RULE_constValue = 24
    RULE_typeSection = 25
    RULE_typeDeclaration = 26
    RULE_classDeclaration = 27
    RULE_classParent = 28
    RULE_classBody = 29
    RULE_classMember = 30
    RULE_visibilitySection = 31
    RULE_propertyDeclaration = 32
    RULE_propertyAccessor = 33
    RULE_classFunctionDeclaration = 34
    RULE_classProcedureDeclaration = 35
    RULE_classFieldDeclaration = 36
    RULE_inheritedStatement = 37
    RULE_constructorDeclaration = 38
    RULE_destructorDeclaration = 39
    RULE_arrayDeclaration = 40
    RULE_arrayInitializer = 41
    RULE_arrayValueList = 42
    RULE_arrayType = 43
    RULE_arrayRange = 44
    RULE_typeName = 45
    RULE_simpleType = 46
    RULE_enumDeclaration = 47
    RULE_enumValueList = 48
    RULE_enumValue = 49
    RULE_recordDeclaration = 50
    RULE_recordFieldDeclaration = 51
    RULE_functionDeclaration = 52
    RULE_procedureDeclaration = 53
    RULE_formalParamList = 54
    RULE_formalParam = 55
    RULE_declaration = 56
    RULE_builtinDiskFunctionName = 57
    RULE_builtinHashFunctionName = 58
    RULE_functionName = 59
    RULE_functionCallExpr = 60
    RULE_procedureCallStatement = 61
    RULE_actualParamList = 62
    RULE_actualParam = 63
    RULE_varSection = 64
    RULE_varDeclaration = 65
    RULE_varType = 66
    RULE_identList = 67
    RULE_block = 68
    RULE_localDeclaration = 69
    RULE_statementList = 70
    RULE_statement = 71
    RULE_incstatement = 72
    RULE_decstatement = 73
    RULE_caseStatement = 74
    RULE_caseItem = 75
    RULE_caseLabelList = 76
    RULE_caseLabel = 77
    RULE_caseElse = 78
    RULE_breakStatement = 79
    RULE_continueStatement = 80
    RULE_tryStatement = 81
    RULE_exitStatement = 82
    RULE_forStatement = 83
    RULE_repeatStatement = 84
    RULE_argumentList = 85
    RULE_whileStatement = 86
    RULE_ifStatement = 87
    RULE_condition = 88
    RULE_compareOp = 89
    RULE_compoundStatement = 90
    RULE_assignment = 91
    RULE_variableRef = 92
    RULE_variableSuffix = 93
    RULE_expr = 94
    RULE_boolOrExpr = 95
    RULE_boolXorExpr = 96
    RULE_boolAndExpr = 97
    RULE_compareExpr = 98
    RULE_addExpr = 99
    RULE_term = 100
    RULE_factor = 101
    RULE_writeLnStatement = 102
    RULE_writeArgList = 103
    RULE_writeArg = 104

    ruleNames =  [ "sourceFile", "programFile", "unitFile", "libraryFile", 
                   "compilerDirective", "exportsClause", "exportItem", "exportSignature", 
                   "exportTypeList", "usesClause", "qualifiedIdentList", 
                   "interfaceSection", "implementationSection", "interfaceDeclarationPart", 
                   "implementationDeclarationPart", "unitInitBlock", "qualifiedIdent", 
                   "declarationPart", "classMethodImplementation", "procedureHeader", 
                   "functionHeader", "constSection", "constDeclaration", 
                   "constItem", "constValue", "typeSection", "typeDeclaration", 
                   "classDeclaration", "classParent", "classBody", "classMember", 
                   "visibilitySection", "propertyDeclaration", "propertyAccessor", 
                   "classFunctionDeclaration", "classProcedureDeclaration", 
                   "classFieldDeclaration", "inheritedStatement", "constructorDeclaration", 
                   "destructorDeclaration", "arrayDeclaration", "arrayInitializer", 
                   "arrayValueList", "arrayType", "arrayRange", "typeName", 
                   "simpleType", "enumDeclaration", "enumValueList", "enumValue", 
                   "recordDeclaration", "recordFieldDeclaration", "functionDeclaration", 
                   "procedureDeclaration", "formalParamList", "formalParam", 
                   "declaration", "builtinDiskFunctionName", "builtinHashFunctionName", 
                   "functionName", "functionCallExpr", "procedureCallStatement", 
                   "actualParamList", "actualParam", "varSection", "varDeclaration", 
                   "varType", "identList", "block", "localDeclaration", 
                   "statementList", "statement", "incstatement", "decstatement", 
                   "caseStatement", "caseItem", "caseLabelList", "caseLabel", 
                   "caseElse", "breakStatement", "continueStatement", "tryStatement", 
                   "exitStatement", "forStatement", "repeatStatement", "argumentList", 
                   "whileStatement", "ifStatement", "condition", "compareOp", 
                   "compoundStatement", "assignment", "variableRef", "variableSuffix", 
                   "expr", "boolOrExpr", "boolXorExpr", "boolAndExpr", "compareExpr", 
                   "addExpr", "term", "factor", "writeLnStatement", "writeArgList", 
                   "writeArg" ]

    EOF = Token.EOF
    PROGRAM=1
    BEGIN_=2
    END=3
    LIBRARY=4
    UNIT=5
    INTERFACE=6
    IMPLEMENTATION=7
    USES=8
    EXPORTS=9
    CONST=10
    VAR=11
    TYPE=12
    RECORD=13
    ARRAY=14
    OF=15
    NIL=16
    DOUBLE=17
    INTEGER=18
    CASE=19
    IF=20
    THEN=21
    ELSE=22
    BREAK=23
    CONTINUE=24
    NOT=25
    AND=26
    OR=27
    XOR=28
    WHILE=29
    DO=30
    REPEAT=31
    UNTIL=32
    FOR=33
    TO=34
    DOWNTO=35
    INC=36
    DEC=37
    LOW=38
    HIGH=39
    POS=40
    COPY=41
    LENGTH=42
    ASSIGNED=43
    PROCEDURE=44
    FUNCTION=45
    RESULT=46
    EXIT=47
    TRY=48
    FINALLY=49
    EXCEPT=50
    CLASS=51
    CONSTRUCTOR=52
    DESTRUCTOR=53
    PRIVATE=54
    PROTECTED=55
    PUBLIC=56
    PUBLISHED=57
    PROPERTY=58
    READ=59
    WRITE=60
    INHERITED=61
    WRITELN=62
    BOOLEAN=63
    TRUE=64
    FALSE=65
    BLAKE2=66
    CRC16=67
    CRC32=68
    CRC32C=69
    CRC64=70
    MD5=71
    SHA1=72
    SHA3=73
    SHA224=74
    SHA256=75
    SHA384=76
    SHA512=77
    DISKFREE=78
    DISKTOTAL=79
    DISKLABEL=80
    DISKSERIAL=81
    DISKFILESYSTEM=82
    DISKTYPE=83
    DISKSHARE=84
    COMPILER_DIRECTIVE=85
    DOTDOT=86
    DOT=87
    ASSIGN=88
    COLON=89
    SEMI=90
    COMMA=91
    PLUS=92
    MINUS=93
    STAR=94
    SLASH=95
    LBRACK=96
    LPAREN=97
    RPAREN=98
    RBRACK=99
    CARET=100
    AT=101
    EQ_OP=102
    LE_OP=103
    NE_OP=104
    LT_OP=105
    GE_OP=106
    GT_OP=107
    STRING=108
    IDENT=109
    HEXNUMBER=110
    FLOATNUMBER=111
    NUMBER=112
    WS=113
    COMMENT1=114
    COMMENT2=115
    COMMENT3=116

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniPascalParser.EOF, 0)

        def programFile(self):
            return self.getTypedRuleContext(MiniPascalParser.ProgramFileContext,0)


        def unitFile(self):
            return self.getTypedRuleContext(MiniPascalParser.UnitFileContext,0)


        def libraryFile(self):
            return self.getTypedRuleContext(MiniPascalParser.LibraryFileContext,0)


        def compilerDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPascalParser.CompilerDirectiveContext)
            else:
                return self.getTypedRuleContext(MiniPascalParser.CompilerDirectiveContext,i)


        def getRuleIndex(self):
            return MiniPascalParser.RULE_sourceFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSourceFile" ):
                listener.enterSourceFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSourceFile" ):
                listener.exitSourceFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSourceFile" ):
                return visitor.visitSourceFile(self)
            else:
                return visitor.visitChildren(self)




    def sourceFile(self):

        localctx = MiniPascalParser.SourceFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sourceFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==85:
                self.state = 210
                self.compilerDirective()
                self.state = 215
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 219
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 216
                self.programFile()
                pass
            elif token in [5]:
                self.state = 217
                self.unitFile()
                pass
            elif token in [4]:
                self.state = 218
                self.libraryFile()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 221
            self.match(MiniPascalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(MiniPascalParser.PROGRAM, 0)

        def IDENT(self):
            return self.getToken(MiniPascalParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(MiniPascalParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(MiniPascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(MiniPascalParser.DOT, 0)

        def usesClause(self):
            return self.getTypedRuleContext(MiniPascalParser.UsesClauseContext,0)


        def declarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPascalParser.DeclarationPartContext)
            else:
                return self.getTypedRuleContext(MiniPascalParser.DeclarationPartContext,i)


        def getRuleIndex(self):
            return MiniPascalParser.RULE_programFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramFile" ):
                listener.enterProgramFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramFile" ):
                listener.exitProgramFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramFile" ):
                return visitor.visitProgramFile(self)
            else:
                return visitor.visitChildren(self)




    def programFile(self):

        localctx = MiniPascalParser.ProgramFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 223
            self.match(MiniPascalParser.PROGRAM)
            self.state = 224
            self.match(MiniPascalParser.IDENT)
            self.state = 225
            self.match(MiniPascalParser.SEMI)
            self.state = 227
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 226
                self.usesClause()


            self.state = 232
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 229
                    self.declarationPart() 
                self.state = 234
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 235
            self.block()
            self.state = 236
            self.match(MiniPascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNIT(self):
            return self.getToken(MiniPascalParser.UNIT, 0)

        def qualifiedIdent(self):
            return self.getTypedRuleContext(MiniPascalParser.QualifiedIdentContext,0)


        def SEMI(self):
            return self.getToken(MiniPascalParser.SEMI, 0)

        def interfaceSection(self):
            return self.getTypedRuleContext(MiniPascalParser.InterfaceSectionContext,0)


        def implementationSection(self):
            return self.getTypedRuleContext(MiniPascalParser.ImplementationSectionContext,0)


        def DOT(self):
            return self.getToken(MiniPascalParser.DOT, 0)

        def unitInitBlock(self):
            return self.getTypedRuleContext(MiniPascalParser.UnitInitBlockContext,0)


        def getRuleIndex(self):
            return MiniPascalParser.RULE_unitFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitFile" ):
                listener.enterUnitFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitFile" ):
                listener.exitUnitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitFile" ):
                return visitor.visitUnitFile(self)
            else:
                return visitor.visitChildren(self)




    def unitFile(self):

        localctx = MiniPascalParser.UnitFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_unitFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 238
            self.match(MiniPascalParser.UNIT)
            self.state = 239
            self.qualifiedIdent()
            self.state = 240
            self.match(MiniPascalParser.SEMI)
            self.state = 241
            self.interfaceSection()
            self.state = 242
            self.implementationSection()
            self.state = 244
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 243
                self.unitInitBlock()


            self.state = 246
            self.match(MiniPascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LibraryFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIBRARY(self):
            return self.getToken(MiniPascalParser.LIBRARY, 0)

        def IDENT(self):
            return self.getToken(MiniPascalParser.IDENT, 0)

        def SEMI(self):
            return self.getToken(MiniPascalParser.SEMI, 0)

        def block(self):
            return self.getTypedRuleContext(MiniPascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(MiniPascalParser.DOT, 0)

        def usesClause(self):
            return self.getTypedRuleContext(MiniPascalParser.UsesClauseContext,0)


        def declarationPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPascalParser.DeclarationPartContext)
            else:
                return self.getTypedRuleContext(MiniPascalParser.DeclarationPartContext,i)


        def exportsClause(self):
            return self.getTypedRuleContext(MiniPascalParser.ExportsClauseContext,0)


        def getRuleIndex(self):
            return MiniPascalParser.RULE_libraryFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibraryFile" ):
                listener.enterLibraryFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibraryFile" ):
                listener.exitLibraryFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibraryFile" ):
                return visitor.visitLibraryFile(self)
            else:
                return visitor.visitChildren(self)




    def libraryFile(self):

        localctx = MiniPascalParser.LibraryFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_libraryFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 248
            self.match(MiniPascalParser.LIBRARY)
            self.state = 249
            self.match(MiniPascalParser.IDENT)
            self.state = 250
            self.match(MiniPascalParser.SEMI)
            self.state = 252
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 251
                self.usesClause()


            self.state = 257
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 254
                    self.declarationPart() 
                self.state = 259
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 261
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 260
                self.exportsClause()


            self.state = 263
            self.block()
            self.state = 264
            self.match(MiniPascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompilerDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'
